--- a/lapok.css
+++ b/lapok.css
@@ -1,5 +1,13 @@
-h3 {
+body {
     font-family: Arial;
-    background-color: grey;
-    padding: 3px;
+    background-color:rgb(60, 60, 60);
+    color: white;
+}
+a {
+    text-decoration: none;
+    color: orange;
+}
+a:hover {
+    background-color: orange;
+    color: white;
 }
