--- a/lapok.css
+++ b/lapok.css
@@ -3,6 +3,10 @@ body {
     background-color:rgb(60, 60, 60);
     color: white;
 }
+h3 {
+    background-color: grey;
+    padding: 3px;
+}
 a {
     text-decoration: none;
     color: orange;
